usl-arboles/y.output
Terminals unused in grammar

   CADE


State 0 conflicts: 1 shift/reduce
State 6 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: programi

    2 programi: decla bloq

    3 decla: %empty
    4      | sentdecla decla

    5 sentdecla: ID '=' exp ';'
    6          | DEFINEF ID '(' paramd ')' ':' TIPOENT bloq

    7 bloq: '{' bloques '}'
    8     | sent

    9 bloques: %empty
   10        | sent bloques

   11 sent: DESPLIEGA '(' exp ')' ';'
   12     | SI logexp bloq
   13     | SI logexp bloq OTRO bloq
   14     | MIENTRAS logexp bloq
   15     | ID '=' exp ';'
   16     | REGRESA exp ';'
   17     | ID '(' parami ')' ';'

   18 exp: ENTERO
   19    | ID
   20    | ID '(' parami ')'
   21    | exp '+' exp
   22    | exp '-' exp
   23    | exp '*' exp
   24    | exp '/' exp
   25    | '(' exp ')'

   26 logexp: logexp AND logexp
   27       | logexp OR logexp
   28       | NOT logexp
   29       | exp IGUAL exp
   30       | exp DIFER exp
   31       | exp MAYORQUE exp
   32       | exp MENORQUE exp
   33       | exp MAYORIGUAL exp
   34       | exp MENORIGUAL exp
   35       | '(' logexp ')'

   36 paramd: %empty
   37       | ID lparam

   38 lparam: %empty
   39       | ',' ID lparam

   40 parami: %empty
   41       | exp lparami

   42 lparami: %empty
   43        | ',' exp lparami


Terminals, with rules where they appear

$end (0) 0
'(' (40) 6 11 17 20 25 35
')' (41) 6 11 17 20 25 35
'*' (42) 23
'+' (43) 21
',' (44) 39 43
'-' (45) 22
'/' (47) 24
':' (58) 6
';' (59) 5 11 15 16 17
'=' (61) 5 15
'{' (123) 7
'}' (125) 7
error (256)
ID (258) 5 6 15 17 19 20 37 39
ENTERO (259) 18
CADE (260)
DESPLIEGA (261) 11
REGRESA (262) 16
TIPOENT (263) 6
SI (264) 12 13
OTRO (265) 13
MIENTRAS (266) 14
DEFINEF (267) 6
NOT (268) 28
OR (269) 27
AND (270) 26
DIFER (271) 30
IGUAL (272) 29
MAYORQUE (273) 31
MENORQUE (274) 32
MAYORIGUAL (275) 33
MENORIGUAL (276) 34


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
program (35)
    on left: 1, on right: 0
programi (36)
    on left: 2, on right: 1
decla (37)
    on left: 3 4, on right: 2 4
sentdecla (38)
    on left: 5 6, on right: 4
bloq (39)
    on left: 7 8, on right: 2 6 12 13 14
bloques (40)
    on left: 9 10, on right: 7 10
sent (41)
    on left: 11 12 13 14 15 16 17, on right: 8 10
exp (42)
    on left: 18 19 20 21 22 23 24 25, on right: 5 11 15 16 21 22 23
    24 25 29 30 31 32 33 34 41 43
logexp (43)
    on left: 26 27 28 29 30 31 32 33 34 35, on right: 12 13 14 26 27
    28 35
paramd (44)
    on left: 36 37, on right: 6
lparam (45)
    on left: 38 39, on right: 37 39
parami (46)
    on left: 40 41, on right: 17 20
lparami (47)
    on left: 42 43, on right: 41 43


State 0

    0 $accept: . program $end

    ID       shift, and go to state 1
    DEFINEF  shift, and go to state 2

    ID        [reduce using rule 3 (decla)]
    $default  reduce using rule 3 (decla)

    program    go to state 3
    programi   go to state 4
    decla      go to state 5
    sentdecla  go to state 6


State 1

    5 sentdecla: ID . '=' exp ';'

    '='  shift, and go to state 7


State 2

    6 sentdecla: DEFINEF . ID '(' paramd ')' ':' TIPOENT bloq

    ID  shift, and go to state 8


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: programi .

    $default  reduce using rule 1 (program)


State 5

    2 programi: decla . bloq

    ID         shift, and go to state 10
    DESPLIEGA  shift, and go to state 11
    REGRESA    shift, and go to state 12
    SI         shift, and go to state 13
    MIENTRAS   shift, and go to state 14
    '{'        shift, and go to state 15

    bloq  go to state 16
    sent  go to state 17


State 6

    4 decla: sentdecla . decla

    ID       shift, and go to state 1
    DEFINEF  shift, and go to state 2

    ID        [reduce using rule 3 (decla)]
    $default  reduce using rule 3 (decla)

    decla      go to state 18
    sentdecla  go to state 6


State 7

    5 sentdecla: ID '=' . exp ';'

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 22


State 8

    6 sentdecla: DEFINEF ID . '(' paramd ')' ':' TIPOENT bloq

    '('  shift, and go to state 23


State 9

    0 $accept: program $end .

    $default  accept


State 10

   15 sent: ID . '=' exp ';'
   17     | ID . '(' parami ')' ';'

    '='  shift, and go to state 24
    '('  shift, and go to state 25


State 11

   11 sent: DESPLIEGA . '(' exp ')' ';'

    '('  shift, and go to state 26


State 12

   16 sent: REGRESA . exp ';'

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 27


State 13

   12 sent: SI . logexp bloq
   13     | SI . logexp bloq OTRO bloq

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    NOT     shift, and go to state 28
    '('     shift, and go to state 29

    exp     go to state 30
    logexp  go to state 31


State 14

   14 sent: MIENTRAS . logexp bloq

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    NOT     shift, and go to state 28
    '('     shift, and go to state 29

    exp     go to state 30
    logexp  go to state 32


State 15

    7 bloq: '{' . bloques '}'

    ID         shift, and go to state 10
    DESPLIEGA  shift, and go to state 11
    REGRESA    shift, and go to state 12
    SI         shift, and go to state 13
    MIENTRAS   shift, and go to state 14

    $default  reduce using rule 9 (bloques)

    bloques  go to state 33
    sent     go to state 34


State 16

    2 programi: decla bloq .

    $default  reduce using rule 2 (programi)


State 17

    8 bloq: sent .

    $default  reduce using rule 8 (bloq)


State 18

    4 decla: sentdecla decla .

    $default  reduce using rule 4 (decla)


State 19

   19 exp: ID .
   20    | ID . '(' parami ')'

    '('  shift, and go to state 35

    $default  reduce using rule 19 (exp)


State 20

   18 exp: ENTERO .

    $default  reduce using rule 18 (exp)


State 21

   25 exp: '(' . exp ')'

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 36


State 22

    5 sentdecla: ID '=' exp . ';'
   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ';'  shift, and go to state 41


State 23

    6 sentdecla: DEFINEF ID '(' . paramd ')' ':' TIPOENT bloq

    ID  shift, and go to state 42

    $default  reduce using rule 36 (paramd)

    paramd  go to state 43


State 24

   15 sent: ID '=' . exp ';'

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 44


State 25

   17 sent: ID '(' . parami ')' ';'

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    $default  reduce using rule 40 (parami)

    exp     go to state 45
    parami  go to state 46


State 26

   11 sent: DESPLIEGA '(' . exp ')' ';'

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 47


State 27

   16 sent: REGRESA exp . ';'
   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ';'  shift, and go to state 48


State 28

   28 logexp: NOT . logexp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    NOT     shift, and go to state 28
    '('     shift, and go to state 29

    exp     go to state 30
    logexp  go to state 49


State 29

   25 exp: '(' . exp ')'
   35 logexp: '(' . logexp ')'

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    NOT     shift, and go to state 28
    '('     shift, and go to state 29

    exp     go to state 50
    logexp  go to state 51


State 30

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   29 logexp: exp . IGUAL exp
   30       | exp . DIFER exp
   31       | exp . MAYORQUE exp
   32       | exp . MENORQUE exp
   33       | exp . MAYORIGUAL exp
   34       | exp . MENORIGUAL exp

    DIFER       shift, and go to state 52
    IGUAL       shift, and go to state 53
    MAYORQUE    shift, and go to state 54
    MENORQUE    shift, and go to state 55
    MAYORIGUAL  shift, and go to state 56
    MENORIGUAL  shift, and go to state 57
    '+'         shift, and go to state 37
    '-'         shift, and go to state 38
    '*'         shift, and go to state 39
    '/'         shift, and go to state 40


State 31

   12 sent: SI logexp . bloq
   13     | SI logexp . bloq OTRO bloq
   26 logexp: logexp . AND logexp
   27       | logexp . OR logexp

    ID         shift, and go to state 10
    DESPLIEGA  shift, and go to state 11
    REGRESA    shift, and go to state 12
    SI         shift, and go to state 13
    MIENTRAS   shift, and go to state 14
    OR         shift, and go to state 58
    AND        shift, and go to state 59
    '{'        shift, and go to state 15

    bloq  go to state 60
    sent  go to state 17


State 32

   14 sent: MIENTRAS logexp . bloq
   26 logexp: logexp . AND logexp
   27       | logexp . OR logexp

    ID         shift, and go to state 10
    DESPLIEGA  shift, and go to state 11
    REGRESA    shift, and go to state 12
    SI         shift, and go to state 13
    MIENTRAS   shift, and go to state 14
    OR         shift, and go to state 58
    AND        shift, and go to state 59
    '{'        shift, and go to state 15

    bloq  go to state 61
    sent  go to state 17


State 33

    7 bloq: '{' bloques . '}'

    '}'  shift, and go to state 62


State 34

   10 bloques: sent . bloques

    ID         shift, and go to state 10
    DESPLIEGA  shift, and go to state 11
    REGRESA    shift, and go to state 12
    SI         shift, and go to state 13
    MIENTRAS   shift, and go to state 14

    $default  reduce using rule 9 (bloques)

    bloques  go to state 63
    sent     go to state 34


State 35

   20 exp: ID '(' . parami ')'

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    $default  reduce using rule 40 (parami)

    exp     go to state 45
    parami  go to state 64


State 36

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   25    | '(' exp . ')'

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ')'  shift, and go to state 65


State 37

   21 exp: exp '+' . exp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 66


State 38

   22 exp: exp '-' . exp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 67


State 39

   23 exp: exp '*' . exp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 68


State 40

   24 exp: exp '/' . exp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 69


State 41

    5 sentdecla: ID '=' exp ';' .

    $default  reduce using rule 5 (sentdecla)


State 42

   37 paramd: ID . lparam

    ','  shift, and go to state 70

    $default  reduce using rule 38 (lparam)

    lparam  go to state 71


State 43

    6 sentdecla: DEFINEF ID '(' paramd . ')' ':' TIPOENT bloq

    ')'  shift, and go to state 72


State 44

   15 sent: ID '=' exp . ';'
   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ';'  shift, and go to state 73


State 45

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   41 parami: exp . lparami

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ','  shift, and go to state 74

    $default  reduce using rule 42 (lparami)

    lparami  go to state 75


State 46

   17 sent: ID '(' parami . ')' ';'

    ')'  shift, and go to state 76


State 47

   11 sent: DESPLIEGA '(' exp . ')' ';'
   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ')'  shift, and go to state 77


State 48

   16 sent: REGRESA exp ';' .

    $default  reduce using rule 16 (sent)


State 49

   26 logexp: logexp . AND logexp
   27       | logexp . OR logexp
   28       | NOT logexp .

    OR   shift, and go to state 58
    AND  shift, and go to state 59

    $default  reduce using rule 28 (logexp)


State 50

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   25    | '(' exp . ')'
   29 logexp: exp . IGUAL exp
   30       | exp . DIFER exp
   31       | exp . MAYORQUE exp
   32       | exp . MENORQUE exp
   33       | exp . MAYORIGUAL exp
   34       | exp . MENORIGUAL exp

    DIFER       shift, and go to state 52
    IGUAL       shift, and go to state 53
    MAYORQUE    shift, and go to state 54
    MENORQUE    shift, and go to state 55
    MAYORIGUAL  shift, and go to state 56
    MENORIGUAL  shift, and go to state 57
    '+'         shift, and go to state 37
    '-'         shift, and go to state 38
    '*'         shift, and go to state 39
    '/'         shift, and go to state 40
    ')'         shift, and go to state 65


State 51

   26 logexp: logexp . AND logexp
   27       | logexp . OR logexp
   35       | '(' logexp . ')'

    OR   shift, and go to state 58
    AND  shift, and go to state 59
    ')'  shift, and go to state 78


State 52

   30 logexp: exp DIFER . exp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 79


State 53

   29 logexp: exp IGUAL . exp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 80


State 54

   31 logexp: exp MAYORQUE . exp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 81


State 55

   32 logexp: exp MENORQUE . exp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 82


State 56

   33 logexp: exp MAYORIGUAL . exp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 83


State 57

   34 logexp: exp MENORIGUAL . exp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 84


State 58

   27 logexp: logexp OR . logexp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    NOT     shift, and go to state 28
    '('     shift, and go to state 29

    exp     go to state 30
    logexp  go to state 85


State 59

   26 logexp: logexp AND . logexp

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    NOT     shift, and go to state 28
    '('     shift, and go to state 29

    exp     go to state 30
    logexp  go to state 86


State 60

   12 sent: SI logexp bloq .
   13     | SI logexp bloq . OTRO bloq

    OTRO  shift, and go to state 87

    $default  reduce using rule 12 (sent)


State 61

   14 sent: MIENTRAS logexp bloq .

    $default  reduce using rule 14 (sent)


State 62

    7 bloq: '{' bloques '}' .

    $default  reduce using rule 7 (bloq)


State 63

   10 bloques: sent bloques .

    $default  reduce using rule 10 (bloques)


State 64

   20 exp: ID '(' parami . ')'

    ')'  shift, and go to state 88


State 65

   25 exp: '(' exp ')' .

    $default  reduce using rule 25 (exp)


State 66

   21 exp: exp . '+' exp
   21    | exp '+' exp .
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp

    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 21 (exp)


State 67

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   22    | exp '-' exp .
   23    | exp . '*' exp
   24    | exp . '/' exp

    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 22 (exp)


State 68

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   23    | exp '*' exp .
   24    | exp . '/' exp

    $default  reduce using rule 23 (exp)


State 69

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   24    | exp '/' exp .

    $default  reduce using rule 24 (exp)


State 70

   39 lparam: ',' . ID lparam

    ID  shift, and go to state 89


State 71

   37 paramd: ID lparam .

    $default  reduce using rule 37 (paramd)


State 72

    6 sentdecla: DEFINEF ID '(' paramd ')' . ':' TIPOENT bloq

    ':'  shift, and go to state 90


State 73

   15 sent: ID '=' exp ';' .

    $default  reduce using rule 15 (sent)


State 74

   43 lparami: ',' . exp lparami

    ID      shift, and go to state 19
    ENTERO  shift, and go to state 20
    '('     shift, and go to state 21

    exp  go to state 91


State 75

   41 parami: exp lparami .

    $default  reduce using rule 41 (parami)


State 76

   17 sent: ID '(' parami ')' . ';'

    ';'  shift, and go to state 92


State 77

   11 sent: DESPLIEGA '(' exp ')' . ';'

    ';'  shift, and go to state 93


State 78

   35 logexp: '(' logexp ')' .

    $default  reduce using rule 35 (logexp)


State 79

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   30 logexp: exp DIFER exp .

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 30 (logexp)


State 80

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   29 logexp: exp IGUAL exp .

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 29 (logexp)


State 81

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   31 logexp: exp MAYORQUE exp .

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 31 (logexp)


State 82

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   32 logexp: exp MENORQUE exp .

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 32 (logexp)


State 83

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   33 logexp: exp MAYORIGUAL exp .

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 33 (logexp)


State 84

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   34 logexp: exp MENORIGUAL exp .

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 34 (logexp)


State 85

   26 logexp: logexp . AND logexp
   27       | logexp . OR logexp
   27       | logexp OR logexp .

    AND  shift, and go to state 59

    $default  reduce using rule 27 (logexp)


State 86

   26 logexp: logexp . AND logexp
   26       | logexp AND logexp .
   27       | logexp . OR logexp

    $default  reduce using rule 26 (logexp)


State 87

   13 sent: SI logexp bloq OTRO . bloq

    ID         shift, and go to state 10
    DESPLIEGA  shift, and go to state 11
    REGRESA    shift, and go to state 12
    SI         shift, and go to state 13
    MIENTRAS   shift, and go to state 14
    '{'        shift, and go to state 15

    bloq  go to state 94
    sent  go to state 17


State 88

   20 exp: ID '(' parami ')' .

    $default  reduce using rule 20 (exp)


State 89

   39 lparam: ',' ID . lparam

    ','  shift, and go to state 70

    $default  reduce using rule 38 (lparam)

    lparam  go to state 95


State 90

    6 sentdecla: DEFINEF ID '(' paramd ')' ':' . TIPOENT bloq

    TIPOENT  shift, and go to state 96


State 91

   21 exp: exp . '+' exp
   22    | exp . '-' exp
   23    | exp . '*' exp
   24    | exp . '/' exp
   43 lparami: ',' exp . lparami

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ','  shift, and go to state 74

    $default  reduce using rule 42 (lparami)

    lparami  go to state 97


State 92

   17 sent: ID '(' parami ')' ';' .

    $default  reduce using rule 17 (sent)


State 93

   11 sent: DESPLIEGA '(' exp ')' ';' .

    $default  reduce using rule 11 (sent)


State 94

   13 sent: SI logexp bloq OTRO bloq .

    $default  reduce using rule 13 (sent)


State 95

   39 lparam: ',' ID lparam .

    $default  reduce using rule 39 (lparam)


State 96

    6 sentdecla: DEFINEF ID '(' paramd ')' ':' TIPOENT . bloq

    ID         shift, and go to state 10
    DESPLIEGA  shift, and go to state 11
    REGRESA    shift, and go to state 12
    SI         shift, and go to state 13
    MIENTRAS   shift, and go to state 14
    '{'        shift, and go to state 15

    bloq  go to state 98
    sent  go to state 17


State 97

   43 lparami: ',' exp lparami .

    $default  reduce using rule 43 (lparami)


State 98

    6 sentdecla: DEFINEF ID '(' paramd ')' ':' TIPOENT bloq .

    $default  reduce using rule 6 (sentdecla)
